# Go2Go.Web/Controllers/Api/UserLedgerController.cs
@@ -13,6 +13,7 @@ using System.Threading.Tasks;
 using System.Security.Claims;
 using Go2Go.Core.Extentions;
 using Go2Go.Core;
+using Go2Go.Model.ViewModels;
 
 namespace Go2Go.Web.Controllers.Api
 {
@@ -30,19 +31,26 @@ namespace Go2Go.Web.Controllers.Api
             _logger = logger;
         }
 
-        [HttpPost]
-        [Route("get-ledger-balance/{userId}")]
-        public async Task<ActionResult<bool>> GetLedgerBalanceForUser(int userId)
+        [HttpGet]
+        [Route("get-ledger-balance/{userId:int}")]
+        public async Task<ActionResult<DriverBalanceViewModel>> GetLedgerBalanceForUser(int userId)
         {
             var resultx = await _accountService.GetLedgerBalanceForUser(userId);
             return Ok(resultx);
         }
 
-        [HttpPost]
+        [HttpGet]
         [Route("get-ledger-balance-for-key/{userkey}")]
-        public async Task<ActionResult<bool>> GetLedgerBalanceForKey(string userkey)
+        public async Task<ActionResult<DriverBalanceViewModel>> GetLedgerBalanceForKey(string userkey)
         {
             var resultx = await _accountService.GetLedgerBalanceForKey(userkey);
+            return Ok(resultx);
+        }
+        [HttpGet]
+        [Route("get-ledger-entries/{userkey}")]
+        public async Task<ActionResult<UserLedgerViewModel>> GetLedgerEntries(string userkey)
+        {
+            var resultx = await _accountService.GetLedgerEntry(userkey);
             return Ok(resultx);
         }
     }
